guide/v0/sdk.md
# SDK

In order to simplify the integration of PTI Hosted forms and enable the tracking of UI interactions, 
PTI provides a SDK that comes in the form of a Javascript library.

## Initialize the SDK

You should include and initialize the library from our CDN on your front end page. 
Normally there should only be one call to the `PTI.init` function.

```js
 <script async defer src="https://sdk.pearsurge.io/0.0.11/index.js"></script>
    <script>
      window.ptiAsyncInit = function() {
        PTI.init({
          clientId: "CLIENT_ID",
          generateTokenPath: "GENERATE_TOKEN_ENDPOINT",
          sessionId: "SESSION_ID"
        })
      }
    </script>
```

The `CLIENT_ID` must be set to the UUID provided by PTI when you did the [onboarding](onboarding.md).

The `GENERATE_TOKEN_ENDPOINT` should be set to the url of your backend that will proxy the generation of [single use tokens](auth.md#single-use-tokens)

The `SESSION_ID` represents the user session with the web application and will be used to group all the UI interactions which are monitored by the PTI SDK.

?> The `SESSION_ID` parameter can be omitted (a random UUID will be generated by the SDK in that case), but ideally, 
you would provide a value that allows you to do an association to all the session information you keep on your end.


## Updating the context

It is possible to leverage PTI UI interaction monitoring even on forms on your site that are not the PTI Hosted Forms.
Here is an example call to the updateContext function:

```js
    PTI.updateContext({scenarioId: "SCENARIO_ID", userId: "USER_ID", sessionId: PTI.config.sessionId});
```

The `SCENARIO_ID` value can be one of the scenarios you configured for your KYC flows or any value that makes sense in your situation.
This value is used to track the steps of the user journey withing your site.

The `USER_ID` value should be set to the user ID you use with all the PTI endpoints

The `sessionId` can be the same as the one you provided in the init call ( as shown here ). Conceptually, the sessionId corrsponds to
the user session with your site or application.

Updating the context is not mandatory and it is done for you under the hood when you display the Hosted Forms.

## Displaying forms

The hosted forms are displayed within an iframe on the html element of your choosing. Here are code examples showing how to
render the forms on your web application.

#### Display the KYC form

```html
<div id="kyc_form"></div>
<script>
 PTI.form({
    type: "KYC",
    requestId: "REQUEST_ID",
    userId: "USER_ID",
    scenarioId: "SCENARIO_ID",
    parentElement: document.getElementById("kyc_form"), 
    lang: "en",
 });
</script>
```

#### Display the payment form

```html
<div id="payment_form"></div>
<script>
  PTI.form({
      type: "FIAT_FUNDING",
      requestId: "REQUEST_ID",
      userId: "USER_ID",
      scenarioId: "SCENARIO_ID",
      currency: "USD",
      amount: 150,
      parentElement: document.getElementById("payment_form"),
      lang: "es",
  });
</script>  
```

The value of the `type` parameter will determine which form will be displayed. (`FIAT_FUNDING` for the payment form and `KYC` for the KYC form )

The value of `REQUEST_ID` is under your control. You should provide a UUID that you will store on your side to be able to correlate to a specific
transaction or KYC check. If you ever have to report a problem to PTI, you must provide the `REQUEST_ID` associated to it to allow PTI to investigate.
The `REQUEST_ID` UUID should be unique. Trying to complete 2 transactions or KYCs with the same `REQUEST_ID` will generate an error.

The value of `USER_ID` is also under your control. It corresponds to the value you passed in the `id` field in the body of the [create user](https://provenancetech.github.io/pti-docs/api/v0/#/default/post_users) API call.
You must store the this value at user creation time to make sure you can associate your users with users in the PTI platform.

The value of `SCENARIO_ID` will select the scenario under which the transaction or KYC will be made.
The scenario must have been configured previously as explained [here](kyc.md).
Passing an unconfigured `SCENARIO_ID` value will result in an error. 

The value of `lang` is to specify which language strings should be used in the form. Default is `en` (English)